Add missing pattern for matching leaking java processes
We found that a missing pattern might result in leaking GradleDaemons
not cleaned up and cause the subsequent clean build fail.